# caption-extractor

./: .gitignore  CHANGES.md  IMPLEMENTATION_SUMMARY.md  NETWORK_ERROR_FIX.md  PADDLEOCR_FIX.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  README.md  config.yml  download_models.py  install-python310.sh  pyproject.toml  start.sh  start_api.py  test_import.py
docs/: AI_AGENTS.md  API.md  API_QUICK_REFERENCE.md  API_README.md  BEFORE_AFTER_COMPARISON.md  FASTAPI_INTEGRATION.md  PERFORMANCE_API_REFERENCE.md  PERFORMANCE_FEATURE_SUMMARY.md  PERFORMANCE_TRACKING.md  PERFORMANCE_TROUBLESHOOTING.md  PIPELINE_ARCHITECTURE.md  TESTING_CHECKLIST.md  TROUBLESHOOTING_NETWORK.md  USAGE.md
examples/: check_performance.py
src/caption_extractor/: __init__.py  api_service.py  batch_processor_by_steps.py  config_manager.py  image_agent.py  image_processor.py  logging_config.py  main.py  metadata_combiner.py  ocr_processor.py  ollama_client.py  pipeline_state_manager.py  run_api.py  step_processor.py  text_agent.py  translator_agent.py
src/caption_extractor/llm/text/: text_agent.py
src/caption_extractor/llm/translation/: translator_agent.py
src/caption_extractor/llm/vl/: image_agent.py
src/caption_extractor/ocr/: ocr_processor.py
src/caption_extractor/performance/: __init__.py  performance_stats.py
src/caption_extractor/pipeline/: image_processor.py
src/caption_extractor/pipeline/batch_processor/: batch_processor_by_steps.py
src/caption_extractor/pipeline/metadata_combiner/: metadata_combiner.py
src/caption_extractor/pipeline/step_processor/: single_image_processor.py  step_processor.py
src/caption_extractor/static/: style.css
src/caption_extractor/templates/: index.html  verification.html
tests/: __init__.py  test_api.py  test_config_manager.py  test_image_processor.py  test_performance_tracking.py
